replace boilerplate code
Co-authored-by: Paul LeTourneau <pletourneau62@gmail.com>
Co-authored-by: Seth Gonzales <sethgonzales157@gmail.com>

--- a/ScrabbleScorer.Tests/ProjectName.Tests.csproj
+++ b/ScrabbleScorer.Tests/ProjectName.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\{PROJECT PRODUCTION FOLDER}\{PROJECT NAME}.csproj" />  
+    <ProjectReference Include="..\ScrabbleScorer\ScrabbleScorer.csproj" />  
   </ItemGroup>
 
 </Project>
